@@ -19,7 +19,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import static gg.jte.extension.api.mocks.MockConfig.mockConfig;
 import static gg.jte.extension.api.mocks.MockParamDescription.mockParamDescription;
@@ -188,7 +187,7 @@ public class TestModelExtension {
                         DYNAMIC_SOURCE_FILE.matcher(path.toString()).find() ||
                         STATIC_SOURCE_FILE.matcher(path.toString()).find()
                     )
-                    .collect(Collectors.toList());
+                    .toList();
 
             assertThat(implementationsPaths).isNotEmpty();
             implementationsPaths.forEach(path -> {
