@@ -8,7 +8,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -27,7 +26,7 @@ class MigrateV1To2Test {
     }
 
     private void copyTemplatesTo(Path tempDir) throws IOException {
-        List<Path> templates = Files.walk(sourceDirectory).filter(p -> p != sourceDirectory).collect(Collectors.toList());
+        List<Path> templates = Files.walk(sourceDirectory).filter(p -> p != sourceDirectory).toList();
         for (Path template : templates) {
             Files.copy(template, tempDir.resolve(template.getFileName()));
         }
